[package]
name = "rodio_playback_position"
version = "0.2.0"
edition = "2024"
description = "An alternative playback backend for rodio sources with accurate position tracking."
license = "MIT"
repository = "https://github.com/linobigatti/rodio_playback_position" 
documentation = "https://docs.rs/rodio_playback_position" 
readme = "README.md"
keywords = ["rodio", "audio", "playback", "audio-sync"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
cpal = "0.17.3"
rodio = { version = "0.22.2", default-features = false }
rtsan-standalone = "0.2.0"
triple_buffer = "8.1.1"

[features]
u128 = []
default = []
